# Search_Engine

./: Answers.md  CMakeLists.txt  DesignSubmission.md  supersearch.cpp  test.cpp
classes/: AVLTree.cpp  AVLTree.h  ArticleObject.cpp  ArticleObject.h  DocumentParser.cpp  DocumentParser.h  IndexHandler.cpp  IndexHandler.h  PersistanceOperator.cpp  PersistanceOperator.h  QueryEngine.cpp  QueryEngine.h
sample_data/coll_1/: news_0064568.json
